--- a/packages/spyglassmc-language-server/package.yaml
+++ b/packages/spyglassmc-language-server/package.yaml
@@ -8,6 +8,6 @@ languages:
 categories:
   - "LSP"
 source:
-  id: pkg:npm/@spyglassmc/language-server@0.1.0-PLACEHOLDER
+  id: pkg:npm/@spyglassmc/language-server@0.4.2
 bin:
   spyglassmc-language-server: npm:spyglassmc-language-server
